--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,54 @@
 [package]
 name = "env_logger"
-edition = "2018"
-version = "0.9.3"
-license = "MIT OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/env-logger-rs/env_logger/"
-documentation = "https://docs.rs/env_logger"
+version = "0.10.2"
 description = """
 A logging implementation for `log` which is configured via an environment
 variable.
 """
+repository = "https://github.com/rust-cli/env_logger"
 categories = ["development-tools::debugging"]
 keywords = ["logging", "log", "logger"]
-include = ["src/**/*", "tests", "LICENSE-*", "README.md", "CHANGELOG.md"]
-
-[workspace]
-members = [
-    "ci"
+license = "MIT OR Apache-2.0"
+edition = "2021"
+rust-version = "1.60.0"  # MSRV
+include = [
+  "build.rs",
+  "src/**/*",
+  "Cargo.toml",
+  "Cargo.lock",
+  "LICENSE*",
+  "README.md",
+  "benches/**/*",
+  "examples/**/*",
+  "tests/**/*",
 ]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
+[package.metadata.release]
+pre-release-replacements = [
+  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
+  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
+  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
+  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
+  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/env_logger/compare/{{tag_name}}...HEAD", exactly=1},
+]
+
+[features]
+default = ["auto-color", "humantime", "regex"]
+color = ["dep:termcolor"]
+auto-color = ["dep:is-terminal", "color"]
+humantime = ["dep:humantime"]
+regex = ["dep:regex"]
 
 [dependencies]
 log = { version = "0.4.8", features = ["std"] }
 regex = { version = "1.0.3", optional = true, default-features=false, features=["std", "perf"] }
 termcolor = { version = "1.1.1", optional = true }
 humantime = { version = "2.0.0", optional = true }
-atty = { version = "0.2.5", optional = true }
+is-terminal = { version = "0.4.0", optional = true }
 
 [[test]]
 name = "regexp_filter"
@@ -41,6 +65,3 @@ harness = false
 [[test]]
 name = "init-twice-retains-filter"
 harness = false
-
-[features]
-default = ["termcolor", "atty", "humantime", "regex"]
