env_logger新增bundle.json部件化
Signed-off-by: ljy9810 <longjianyin@h-partners.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -34,4 +34,7 @@ ohos_cargo_crate("lib") {
         "humantime",
         "regex",
     ]
+    module_output_extension = ".rlib"
+    part_name = "rust_env_logger"
+    subsystem_name = "thirdparty"
 }
